# cmd/api/api.go
@@ -20,12 +20,16 @@ type dbConfig struct {
 	maxIdleTimes string
 }
 
+type mailConfig struct {
+	exp time.Duration
+}
 type config struct {
 	addr    string
 	db      dbConfig
 	env     string
 	version string
 	apiURL  string
+	mail    mailConfig
 }
 
 type application struct {
@@ -70,6 +74,11 @@ func (app *application) mount() http.Handler {
 		})
 		r.Group(func(r chi.Router) {
 			r.Get("/feed", app.getUserFeedHandler)
+		})
+
+		// Public routes
+		r.Route("/authentication", func(r chi.Router) {
+			r.Post("/user", app.registerUserHandler)
 		})
 	})
 	return r
